[package]
name = "relay-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
ethers = "0.6.2"
serde_json = "1.0.73"
serde = {version="1.0.132", features=["derive"]}
url = "2.2.2"
dotenv = "0.15.0"
thiserror = "1.0.30"
ethers-derive-eip712 = "0.2.2"
ethers-core = "0.6.3"
ethers-contract = "0.6.2"
